--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,13 @@ a {
   box-sizing: border-box;
 }
 
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -23,4 +30,5 @@ a {
     color: white;
     background: black;
   }
+
 }
